@@ -5,6 +5,7 @@
 	current answer to the empty string, as do_prompt() can handle a NULL.
 	* src/browser.c (do_browser): Delete a snippet of dead code.
 	* src/browser.c (do_browser): Delete an unneeded variable.
+	* src/search.c (do_gotolinecolumn): Delete another unneeded variable.
 
 2016-03-17  Benno Schulenberg  <bensberg@justemail.net>
 	* src/search.c (do_research): Use the Search key bindings also during
